# helios

./: .gitignore  README.md  helios-agent.yaml  pyproject.toml
.github/workflows/: ci.yml  publish-agent.yml  release.yml
agent/: README.md  pyproject.toml
agent/src/helios_agent/: __init__.py  agent.py  cli.py  client.py  config.py
agent/src/helios_agent/sources/: __init__.py  azure_monitor.py  base.py  cloudwatch.py  datadog.py  gcp_monitoring.py  prometheus.py  registry.py  system.py
cli/: README.md  pyproject.toml
cli/src/helios_cli/: main.py
cli/src/helios_cli/commands/: agent.py  detect.py  predict.py  recommend.py
docs/: INTEGRATION.md  QUICKSTART.md  gcp_agent_guide.md  gcp_full_setup_guide.md  gcp_testing_guide.md  ml-pipeline.md  phase5-design.md  phase6-design.md
docs/architecture/: ARCHITECTURE.md  SAAS_ARCHITECTURE.md
examples/: README.md
examples/demo-environment/data/: .gitkeep  2025-12-31_100users_20mins_failures.csv  2025-12-31_100users_20mins_stats.csv  2025-12-31_100users_report.html
examples/demo-environment/kubernetes/locust/base/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  service.yaml
examples/demo-environment/kubernetes/locust/base/scripts/: locustfile.py
examples/demo-environment/kubernetes/saleor/base/: api-deployment.yaml  configmap.yaml  hpa.yaml  ingress.yaml  kustomization.yaml
examples/demo-environment/kubernetes/saleor/jobs/: migration-jobs.yaml
examples/demo-environment/kubernetes/saleor/overlays/dev/: kustomization.yaml
examples/demo-environment/loadtest/: Dockerfile  README.md  requirements.txt  run-tests.ps1
examples/demo-environment/loadtest/locustfiles/: ramp_pattern.py  read_heavy.py  spike_pattern.py  wave_pattern.py  write_heavy.py
examples/demo-environment/loadtest/locustfiles/common/: graphql_client.py
examples/demo-environment/loadtest/locustfiles/personas/: __init__.py  admin.py  browser.py
examples/demo-environment/loadtest/locustfiles/shapes/: __init__.py  load_shapes.py
infra/: DEPLOYMENT.md  deploy.ps1
infra/kubernetes/helios-inference/: deployment.yaml
infra/kubernetes/saleor/base/: api-service.yaml  configmap.yaml  dashboard-deployment.yaml  dashboard-service.yaml  namespace.yaml  pdb.yaml  secrets.yaml  serviceaccounts.yaml  worker-deployment.yaml
infra/terraform/environments/dev/: main.tf  terraform.tfvars.example  tfplan  variables.tf
infra/terraform/modules/cloudsql/: main.tf
infra/terraform/modules/gke/: main.tf
infra/terraform/modules/iam/: main.tf
infra/terraform/modules/networking/: main.tf
infra/terraform/modules/redis/: main.tf
infra/terraform/modules/storage/: main.tf
landing-page/app/components/landing/: HowItWorks.tsx
loadtest/locustfiles/: locustfile.py
loadtest/locustfiles/common/: __init__.py  utils.py
loadtest/locustfiles/personas/: buyer.py  searcher.py
ml/: config.py  fetch_real_data.py  train.py
ml/cost_intelligence/: app.py  config.py  cost_calculator.py  efficiency.py  forecaster.py  models.py  savings_analyzer.py
ml/inference/: Dockerfile  __init__.py  anomaly_detector.py  app.py  config.py  db.py  metrics.py  model_manager.py  models.py  predictor.py  recommender.py  requirements.txt
ml/inference/storage/: __init__.py  sqlite_backend.py
ml/inference/tests/: locustfile.py  requirements-test.txt  test_api.py
ml/inference/web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
ml/inference/web/src/: App.tsx  App.vue  main.tsx
ml/inference/web/src/components/: MiniChart.tsx
ml/inference/web/src/components/charts/: AgentMap.vue  AnomalyTimeline.vue  MetricChart.vue  PredictionChart.vue
ml/inference/web/src/components/common/: Badge.vue  EmptyState.vue  Modal.vue  StatsCard.vue
ml/inference/web/src/components/deployments/: DeploymentSelector.vue
ml/inference/web/src/components/layout/: Header.vue  Layout.vue  Sidebar.vue
ml/inference/web/src/context/: DeploymentsContext.tsx  ThemeContext.tsx
ml/inference/web/src/hooks/: useAgents.ts
ml/inference/web/src/router/: index.ts
ml/inference/web/src/services/: api.ts
ml/inference/web/src/stores/: agents.ts  deployments.ts
ml/inference/web/src/styles/: index.css  main.css
ml/inference/web/src/views/: AgentInstall.tsx  Agents.tsx  Anomalies.tsx  Anomalies.vue  Dashboard.tsx  Dashboard.vue  Deployments.tsx  DeploymentsOverview.vue  Predictions.tsx
ml/models/: baseline.py  prophet_model.py  xgboost_anomaly.py
ml/pipeline/: data_fetcher.py  feature_engineering.py
ml/tests/: __init__.py  test_models.py
ml/training/: requirements.txt  train_models.py
